force-app/main/default/objects/VisualAntidote__Alert__c/VisualAntidote__Alert__c.object-meta.xml
<CustomObject>
    <label>Alert</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Alert Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>