force-app/main/default/objects/VisualAntidote__Alert__c/fields/VisualAntidote__Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FAILURE</fullName>
            </value>
            <value>
                <fullName>SAVE_FOR_LATER</fullName>
            </value>
            <value>
                <fullName>FAILED_PAYMENT</fullName>
            </value>
            <value>
                <fullName>SUCCESSFUL_SUBMISSION</fullName>
            </value>
            <value>
                <fullName>EMAIL_VERIFICATION</fullName>
            </value>
            <value>
                <fullName>ADMIN_PDF</fullName>
            </value>
            <value>
                <fullName>USER_PDF</fullName>
            </value>
            <value>
                <fullName>LOOKUP_FAILURE</fullName>
            </value>
            <value>
                <fullName>AUTH_FAILURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>