force-app/main/default/objects/VisualAntidote__Alert__c/fields/VisualAntidote__Attach_PDF__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Attach_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach PDF</label>
    <type>Checkbox</type>
</CustomField>