force-app/main/default/objects/VisualAntidote__Alert__c/fields/VisualAntidote__From__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__From__c</fullName>
    <label>From</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>