force-app/main/default/objects/VisualAntidote__Alert__c/fields/VisualAntidote__Status__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>