force-app/main/default/objects/VisualAntidote__Alert__c/fields/VisualAntidote__Subject__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Subject__c</fullName>
    <label>Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>