force-app/main/default/objects/VisualAntidote__Alert__c/fields/VisualAntidote__To__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__To__c</fullName>
    <label>To</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>